# sel4

./: README.md
20240508/: cmake.sh
20240508/sel4-tutorials-manifest/: .tute_config
20240508/sel4-tutorials-manifest/tutorial/: .tute_config  client.c  timer.c
20240508/sel4-tutorials-manifest/tutorial_build/: .ninja_deps  .ninja_log  CMakeCache.txt  archive.capdl-loader_archive.o.cpio  build.ninja  capdl-loader  capdl-loader_archive.o.S  capdl_spec_cspec.c  client  cmake_install.cmake  cspace_client.c  cspace_timer.c  input_files  launch_gdb  output_files  rules.ninja  simulate  spec.cdl  timer
mini_build/sel4-tutorials-manifest/tutorial/: .tute_config
mini_build/sel4-tutorials-manifest/tutorial_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  capabilities  capabilities.bak  cmake_install.cmake  input_files  launch_gdb  output_files  rules.ninja  simulate
mini_build/simple_root/: CMakeLists.txt  arm_gcc_toolchain.cmake  gcc_build.sh  main.c  run.sh
sel4-tutorials-manifest/capabilities/: .tute_config  CMakeLists.txt
sel4-tutorials-manifest/capabilities_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/capabilities_build/kernel/: dts.cmd  gen_header.cmd
sel4-tutorials-manifest/capabilities_build/seL4_libs/: cmake_install.cmake
sel4-tutorials-manifest/capabilities_build/util_libs/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-1/: .tute_config  CMakeLists.txt  main.c
sel4-tutorials-manifest/dynamic-1_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  gcc.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/dynamic-1_build/kernel/: dts.cmd  gen_header.cmd
sel4-tutorials-manifest/dynamic-1_build/seL4_libs/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-1_build/util_libs/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-2/: .tute_config  dynamic-2.md
sel4-tutorials-manifest/dynamic-2_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/dynamic-2_build/kernel/: dts.cmd  gen_header.cmd
sel4-tutorials-manifest/dynamic-2_build/libsel4tutorials/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-2_build/musllibc/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-2_build/seL4_libs/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-2_build/util_libs/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-3/: .tute_config  dynamic-3.md  main.c
sel4-tutorials-manifest/dynamic-3_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/dynamic-3_build/kernel/: dts.cmd  gen_header.cmd
sel4-tutorials-manifest/dynamic-3_build/seL4_libs/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-3_build/util_libs/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-4/: .tute_config  client.c
sel4-tutorials-manifest/dynamic-4_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/dynamic-4_build/kernel/: cmake_install.cmake  dts.cmd  gen_header.cmd  kernel.dtb
sel4-tutorials-manifest/dynamic-4_build/seL4_libs/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-4_build/sel4runtime/: cmake_install.cmake
sel4-tutorials-manifest/dynamic-4_build/util_libs/: cmake_install.cmake
sel4-tutorials-manifest/fault-handlers/: .tute_config
sel4-tutorials-manifest/fault-handlers_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/fault-handlers_build/capdl/: cmake_install.cmake
sel4-tutorials-manifest/fault-handlers_build/kernel/: dts.cmd  gen_header.cmd
sel4-tutorials-manifest/hello-camkes-0/: .tute_config
sel4-tutorials-manifest/hello-camkes-0_build/: CMakeCache.txt  ast.pickle.cmd  input_files  output_files
sel4-tutorials-manifest/hello-camkes-0hngxd9od_build/: CMakeCache.txt  ast.pickle.cmd  check  output_files
sel4-tutorials-manifest/hello-camkes-0hngxd9od_build/.tutegen/hello-camkes-0hngxd9od/old/: CMakeLists.txt  hello-camkes-0.md
sel4-tutorials-manifest/hello-camkes-1/: .tute_config  CMakeLists.txt  hello-1.camkes  hello-camkes-1.md
sel4-tutorials-manifest/hello-camkes-1_build/: CMakeCache.txt  ast.pickle.cmd  check  input_files  output_files
sel4-tutorials-manifest/hello-world/: .tute_config
sel4-tutorials-manifest/hello-world_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  check  cmake_install.cmake  hello-world  hello-world.dis  input_files  launch_gdb  output_files  rules.ninja  simulate
sel4-tutorials-manifest/interrupts/: .tute_config
sel4-tutorials-manifest/interrupts_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/ipc/: .tute_config
sel4-tutorials-manifest/ipc_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/mcs/: .tute_config  CMakeLists.txt  mcs.c  mcs.md  sender.c  server.c
sel4-tutorials-manifest/mcs_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/threads/: .tute_config
sel4-tutorials-manifest/threads_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4-tutorials-manifest/untyped/: .tute_config
sel4-tutorials-manifest/untyped_build/: CMakeCache.txt  build.ninja  check  cmake_install.cmake  input_files  output_files  rules.ninja
sel4test/.repo/: .repo_fetchtimes.json  .repo_localsyncstate.json  TRACE_FILE  copy-link-files.json  project.list
sel4test/build_aarch64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  gcc.cmake  launch_gdb  qemu-arm-virt.dts  rules.ninja  simulate
(+610 files in other folders)
